--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -30,7 +30,6 @@ body {
 }
 
 
-
 .table-title h2 {
     display: inline-block;
     font-weight: bold;
@@ -91,7 +90,7 @@ body {
 
 table.table tr th, table.table tr td {
     border-color: #e9e9e9;
-    padding: 12px 15px;
+    padding: 12px 10px;
     vertical-align: middle;
 
 }
@@ -99,6 +98,7 @@ table.table tr th, table.table tr td {
 table.table tr th {
     background-color: #444E55;
     color: #EFF0F1;
+    font-weight: normal;
 }
 
 table.table tr th:first-child {
@@ -111,18 +111,11 @@ table.table tr th:last-child {
 
 }
 
-table.table-striped tbody tr:nth-of-type(odd) {
-    background-color: #f5f6f6;
-
-}
-
-table.table-striped tbody tr:nth-of-type(even) {
+table.table-striped tbody tr{
     background-color: #e5ebef;
+    white-space: nowrap;
 }
 
-table.table-striped.table-hover tbody tr:hover {
-    background: #f5f6f6;
-}
 
 table.table th i {
     font-size: 14px;
@@ -417,6 +410,34 @@ table.table .avatar {
     float: right;
 }
 
+.table-download-icon {
+    background-image: url("/img/download.png");
+    width: 16px;
+    height: 16px;
+    float: right;
+    cursor: pointer;
+    margin-top:5px;
+}
+
+.table-edit-icon, .table-edit-translation-icon {
+    background-image: url("/img/edit.png");
+    width: 12px;
+    height: 12px;
+    float: right;
+    cursor: pointer;
+    margin-top:5px;
+}
+
+.cut-text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+    max-width: 247px;
+    white-space: nowrap;
+    display: flex;
+    justify-content: space-between;
+}
+
 .name-filter-form {
     background-color: #444E55;
     position: absolute;
@@ -601,7 +622,10 @@ table.table .avatar {
 }
 
 .modal .modal-dialog {
-    max-width: 650px;
+    width: 660px;
+    max-width: 660px;
+    height: 490px;
+    border-radius: 4px;
 }
 
 .modal-title {
@@ -619,14 +643,15 @@ table.table .avatar {
     text-align: center !important;
     color: #13aa57;
 }
-.modal-body-act1{
-    margin:0 !important;
+
+.modal-body-act1 {
+    margin: 0 !important;
     padding-left: 7px;
 }
 
 .modal-body-act {
     text-align: center;
-    margin:0 !important;
+    margin: 0 !important;
 }
 
 .reason {
@@ -641,7 +666,6 @@ table.table .avatar {
 }
 
 .modal .modal-header, .modal .modal-body, .modal .modal-footer {
-    padding: 15px 30px;
     border: none !important;
 }
 
@@ -674,8 +698,8 @@ table.table .avatar {
     position: static;
     width: 500px;
     height: 36px;
-    left: calc(50% - 500px/2);
-    top: calc(50% - 36px/2);
+    left: calc(50% - 500px / 2);
+    top: calc(50% - 36px / 2);
 
     /* Greyscale/00.White */
 
@@ -712,6 +736,7 @@ table.table .avatar {
     color: red;
     font-style: italic;
 }
+
 .main-search {
     flex-grow: 1;
     display: flex;
@@ -990,68 +1015,85 @@ button#searchByForUser {
     width: 90px;
 }
 
-/* sidepanel*/
-.eco-news-active-link {
-    background-color: #a2b5af;
-    font-weight: bold;
+.habit_complexity{
+    white-space: nowrap;
 }
 
-li {
-    list-style-type: none;
+.habit_edit_descriptions{
+    position:fixed;
+    display: none;
+    height: 400px;
+    width: 660px;
+    margin-top: 180px;
+    margin-left: 390px;
+    background: #FFFFFF;
+    border-radius: 4px;
+    z-index: 1000;
 }
-
-.sidepanel {
-    width: 264px;
-    position: fixed;
-    z-index: 1;
-    height: 100%;
-    background-color:  #444E55;
-    overflow-x: hidden;
-    transition: 0.5s;
+.input_translation {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 8px;
+    position: static;
+    width: 612px;
+    height: 86px;
+    left: calc(50% - 612px / 2);
+    top: calc(50% - 86px / 2 + 10px);
+    background: #FFFFFF;
+    border: 1px solid #9CA7B0;
+    box-sizing: border-box;
+    border-radius: 4px;
 }
-
-.sidepanel a:hover {
-    color: #f1f1f1;
-}
-
-.sidepanel a:active {
-    color: #f1f1f1;
-    background-color: #64727d;
-}
-
-.sidepanel a {
-    font-family: Lato;
-    font-style: normal;
-    font-weight: normal;
+.btn_modal{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 24px;
+    position: static;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    border-radius: 4px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 0px;
     font-size: 16px;
-    line-height: 24px;
-    padding-left: 15%;
+    border-color: #13AA57;
+}
+.save_changes_btn {
+    background: #13AA57;
+    color: #ffffff;
+
 }
 
-.sidepanel .closebtn {
-    position: absolute;
-    color: black;
-    top: 0;
-    right: 25px;
-    font-size: 30px;
+.cancel_btn {
+
+    background-color: #ffffff;
+    color:  #13AA57;
 }
 
-.openbtn {
-    position: fixed;
-    font-size: 20px;
-    cursor: pointer;
-    background-color: #839d94;
-    color: white;
-    padding: 10px 15px;
-    border: none;
+.habit_img{
+    height:34px;
+    width:auto;
 }
 
-.openbtn:hover {
-    background-color: #444;
+#upload_image{
+    height: 212px;
+    width: auto;
+    max-width: 456px;
+    alignment: center;
+    left: 53px;
+    top: 169px;
 }
 
-.list-item {
-    /*margin-top: 5%;*/
-    width: 100%;
-    height: 56px;
+#upload_image:hover{
+    background: #FFFFFF;
+    opacity: 0.8;
+    border: 1px dashed #9CA7B0;
+    box-sizing: border-box;
+    border-radius: 4px;
 }
