--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -21,10 +21,21 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <link rel="stylesheet" th:href="@{/management/css/sidebar.css}">
 
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
+    <script th:src="@{/management/habits/jquery.liTextLength.js}"></script>
+    <script>
+        $(function(){
+            $('.pr').liTextLength({
+                length: 25,
+                afterLength: '...',
+                fullText:false
+            });
+        });
+    </script>
 
 </head>
 
@@ -142,7 +153,7 @@
                                         <i class="table-edit-icon"></i>
                                     </td>
                                     <td>
-                                        [[${translation.name}]]
+                                            <div class="pr" style="width: 27em">[[${translation.name}]]</div>
                                         <i id="habit_translation" class="table-edit-translation-icon"
                                            th:href="@{|/management/habits/${habit.getId()}/find|}"></i>
 
