--- a/core/src/main/resources/static/css/main.css
+++ b/core/src/main/resources/static/css/main.css
@@ -19,3 +19,100 @@ table th, table td {
     text-align: center;
     margin-top: -26px;
 }
+
+/* The popup form - hidden by default */
+.form-popup {
+    padding-left: 20px;
+    display: none;
+    position: absolute;
+
+    z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+    max-width: 300px;
+    border-top: none;
+    border-left: 1px solid #9CA7B0;
+    border-right: 1px solid #9CA7B0;
+    border-bottom: 1px solid #9CA7B0;    padding: 10px;
+    background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+    border: #28a745;
+    border: 3px;
+    border-radius: 2px;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+    opacity: 1;
+}
+
+.filter-btn{
+    height: 40px;
+    width: 120px;
+    border-left: 3px solid #13AA57;
+}
+
+/*.search-main-filter{*/
+/*    !* Auto Layout *!*/
+
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    padding: 8px;*/
+
+/*    position: static;*/
+/*    width: 244px;*/
+/*    height: 36px;*/
+/*    left: calc(50% - 244px/2);*/
+/*    top: calc(50% - 36px/2);*/
+
+/*    !* Greyscale/00.White *!*/
+
+/*    background: #FFFFFF;*/
+/*    !* Greyscale/05 *!*/
+
+/*    border: 1px solid #9CA7B0;*/
+/*    box-sizing: border-box;*/
+/*    border-radius: 4px;*/
+
+/*    !* Inside Auto Layout *!*/
+
+/*    flex: none;*/
+/*    order: 1;*/
+/*    align-self: stretch;*/
+/*    flex-grow: 0;*/
+/*    margin: 0px 0px;*/
+/*}*/
