--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -802,12 +802,13 @@ table.table .avatar {
 }
 
 .filter-button {
+    border: 1px solid #9CA7B0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 8px 24px;
-
+    z-index: 9;
     position: static;
     left: 0%;
     right: 0%;
@@ -815,10 +816,8 @@ table.table .avatar {
     bottom: 0%;
 
     /* Greyscale/05 */
-
-    border: 1px solid #9CA7B0;
     box-sizing: border-box;
-    border-radius: 4px;
+    border-radius: 2px;
 
     /* Inside Auto Layout */
 
